--- a/style.css
+++ b/style.css
@@ -1,37 +1,194 @@
-.logo{
-    width: 200px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-.links_Nav{
-    display: flex;
-    gap: 20px;
-
-
-}
-.links_Nav>a{
+/*CSS reset*/
+* {
+    padding: 0;
+    margin: 0;
     text-decoration: none;
-    font-size: 30px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    list-style: none;
+    box-sizing: border-box;
 }
-nav{
+
+body{
+
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+}
+
+/*Navegacion*/
+header {
+
+    width: 100%;
+    height: 50vh;
+    background-image: url(imagenes/FONDO.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+nav { 
+
+    height: 100px;
+    max-width: 1200px;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo-elim {
+
+    width: 120px;
+    margin-right: 20px;
+}
+
+.bar-btn {
+
+    color: white;
+    font-size: 25px;
+    margin-right: 20px;
+    cursor: pointer;
 
 }
-body{
+
+.nav-menu {
+
+    position: fixed;
+    width: 100%;
+    height: 0vh;
+    top: 100px;
+    background: rgb(60, 60, 60, 0.95);
+    text-align: center;
+    transition: all 0.5s;
+
+}
+
+.nav-menu li {
+
+    display: none;
+    line-height: 30px;
+    margin: 50px 0;
+    transition: all 0.5s;
+
+}
+
+.nav-menu li a {
+
+    color: white;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.nav-menu li a.active,
+.nav-menu li a.hover {
+    
+    color: aqua;
+    transition: all 0.3s;
     
 }
-main{
-    padding-top: 100px;
+
+#check {
+    display: none;
 }
 
-footer{
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    padding: 20px;
-    width: 100%;
+#check:checked ~ .nav-menu {
 
+    height: 100vh;
 }
-footer>h4{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+#check:checked ~ .nav-menu li {
+
+    display: block;
+}
+
+.banner-text {
+
+    padding-top: 10px;
     text-align: center;
 }
+
+.banner-text h1 {
+
+    color: white;
+    font-size: 40px;
+    text-transform: uppercase;
+
+}
+
+.banner-text p {
+
+    color: white;
+    font-size: 18px;
+    padding: 30px;
+
+}
+
+@media (min-width: 768px) {
+
+
+    .logo-elim {
+        margin-left: 0px;
+
+    }
+    
+    header {
+        height: 100vh;
+    }
+
+
+    nav {
+        height: 100px;
+        margin: 0 auto;
+    }
+
+    .bar-btn {
+        display: none;
+    }
+
+    .nav-menu {
+        position: relative;
+        height: 100px;
+        top: 0;
+        background: none;
+        transition: none;
+        text-align: right;
+        margin-right: 50px;
+    }
+
+    .nav-menu li {
+
+        display: inline-block;
+        line-height: 100px;
+        margin: 0 20px;
+        transition: none;
+
+    }
+
+    .nav-menun li a {
+        font-size: 18px;
+    }
+
+    .container {
+
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    .banner-text {
+
+        padding-top: 250px;
+    }
+
+    .banner-text h1 {
+
+        font-size: 55px;
+    }
+
+    .banner-text p {
+
+        padding: 30px 200px;
+    }
+
+}
+
