--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
 
     font-family: "Open Sans", sans-serif;
     font-optical-sizing: auto;
+    height: 3000px;
 }
 
 /*Navegacion*/
@@ -29,7 +30,6 @@ header {
 nav { 
 
     height: 100px;
-    max-width: 1200px;
     margin: 0;
     display: flex;
     justify-content: space-between;
@@ -61,6 +61,7 @@ nav {
     text-align: center;
     transition: all 0.5s;
 
+
 }
 
 .nav-menu li {
@@ -80,8 +81,8 @@ nav {
     font-weight: 600;
 }
 
-.nav-menu li a.active,
-.nav-menu li a.hover {
+.nav-menu >li >a.active,
+.nav-menu >li >a:hover {
     
     color: aqua;
     transition: all 0.3s;
