--- a/style.css
+++ b/style.css
@@ -193,3 +193,51 @@ nav {
 
 }
 
+/* main */
+
+main{
+
+}
+
+/* slider */
+h2{
+    text-align: center;
+    margin-top: 50px;
+    font-size: 2rem ;
+}
+.sliders{
+    width: 1280px;
+    height: auto;
+    margin: 50px auto 0;
+    overflow: visible;
+
+    animation: slide 16s infinite alternate ease-in-out;
+}
+.sliders ul{
+    display: flex;
+    padding: 0;
+    width: 400%;
+}
+.sliders li{
+    list-style-type: none;
+    width: 100%;
+}
+.sliders img {
+    width: 100%;
+}
+@keyframes slide {
+    0%{margin-left: 0%;}
+    20%{margin-left: 0%;}
+
+    25%{margin-left: -100%;}
+    45%{margin-left: -100%;}
+
+    50%{margin-left: -200%;}
+    70%{margin-left: -200%;}
+
+    75%{margin-left: -300%;}
+    95%{margin-left: -300%;}
+
+
+
+}
